# base-template

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  _typos.toml  deny.toml  makefile
config/: configs.toml  log4rs.yaml  settings.toml
src/cmd/: Cargo.toml
src/cmd/src/: sample.rs
src/common/: Cargo.toml
src/common/src/: errors.rs  lib.rs  tools.rs
src/common/src/config/: configs.rs  manager.rs  mod.rs  settings.rs  watcher.rs
src/common/src/log/: mod.rs
src/sample/: Cargo.toml
