[workspace]
members = [
    "src/cmd",
    "src/common",
    "src/sample"
]

resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = "z"     # "z": 专注与大小优化
lto = true          # 启用链接时优化
codegen-units = 1   # 减少代码生成单元
panic = "abort"     # panic 时直接终止, 减少错误处理代码
strip = true        # 剥离符号信息

[workspace.dependencies]
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
serde_yaml = "0.9.34"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }

## workspaces members
cmd = { path = "src/cmd" }
common = { path = "src/common" }
server = { path = "src/sample" }
