[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config ={ version = "0.15.11"}
notify = { version = "8.0.0" }
serde.workspace = true
toml.workspace = true
log.workspace = true
log4rs.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true